@@ -1,3 +1,10 @@
+2016-05-25  Titus Brown  <titus@idyll.org>
+
+   * scripts/trim-low-abund.py: switched to watermark-based reporting to
+   isolate a hard-to-trigger undefined variable error in reporting.
+   * tests/test_scripts.py: added a test for basic reporting functionality.
+
+2016-05-16  Titus Brown  <titus@idyll.org>
 2016-05-16  Luiz Irber  <khmer@luizirber.org>
 
    * Makefile,jenkins-build.sh,setup.cfg,tests/khmer_tst_utils.py,
